# cairo-playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: acfutils.cmake
src/glutils/: CMakeLists.txt  app.c  gl.c  glutils_impl.h  renderer.c
src/glutils/glutils/: app.h  gl.h  renderer.h
src/playground/: main.c
